# poetry-template

./: README.md  pyproject.toml  setup.sh
tasks/: setup.sh
