[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
panda = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
flake8 = "*"
flake8-comprehensions = "*"
black = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
